# streamt

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCUSSION.md  LICENSE  LOCAL_DEVELOPMENT.md  NOTES.md  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: index.md
docs/assets/stylesheets/: extra.css
docs/concepts/: dag.md  exposures.md  models.md  overview.md  sources.md  streaming-fundamentals.md  tests.md
docs/examples/: ecommerce.md  iot.md  payments.md
docs/getting-started/: first-pipeline.md  installation.md  quickstart.md
docs/reference/: cli.md  configuration.md  flink-options.md  governance.md  materializations.md  yaml-schema.md
docs/specs/: build-artifacts.md  multi-environment.md
examples/payments/: stream_project.yml
examples/payments/docs/: index.html  manifest.json
specs/: ARCHITECTURE.md  CONCEPTS.md  DSL.md  QUESTIONS.md  README.md  TEST_CASES.md  VISION.md
src/streamt/: __init__.py  __main__.py  cli.py
src/streamt/compiler/: __init__.py  compiler.py  flink_dialect.py  manifest.py
src/streamt/core/: __init__.py  dag.py  models.py  parser.py  validator.py
src/streamt/deployer/: __init__.py  connect.py  flink.py  kafka.py  planner.py  schema_registry.py
src/streamt/docs/: __init__.py  generator.py
src/streamt/testing/: __init__.py  runner.py
tests/: __init__.py
tests/fixtures/complete_project/: stream_project.yml
tests/fixtures/minimal_project/: stream_project.yml
tests/integration/: conftest.py  test_connect_e2e.py  test_continuous_tests_e2e.py  test_event_time_e2e.py  test_flink_e2e.py  test_kafka_deployer.py  test_kafka_e2e.py  test_pipeline_e2e.py  test_realistic_scenarios.py  test_schema_registry_e2e.py  test_status_e2e.py  test_streaming_semantics.py
tests/scenarios/: __init__.py  test_ecommerce_domain.py  test_edge_cases.py  test_finserv_domain.py  test_governance.py  test_iot_domain.py  test_project_evolution.py
tests/unit/: __init__.py  test_cli.py  test_compiler.py  test_dag.py  test_environment.py  test_parser.py  test_sql_type_inference.py  test_validator.py
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
ui/src/: App.tsx  main.tsx
(+55 files in other folders)
